# axum-htmx-chat

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
src/: chat_message.rs  main.rs  state.rs
src/handlers/: pages.rs  rest.rs  ws.rs
src/state/: local.rs  mod.rs
templates/: base.html  chat.html
templates/components/: chat_bubble.html  chat_submit_form.html
